1101 refine scheduled job batch statuses (#647)
* Added statuses for jobs

* Replacing in-place job-scheduler logic with job-scheduler api logic

* Replacing in-place job-scheduler logic with job-scheduler api logic

* Fixing unit-tests

* Fixing unit-tests

* Fixing unit-tests

* Merging

* Merging

* Replacing logic, duplicated with job-scheduler one

* Replacing logic, duplicated with job-scheduler one

* Renamed import alias

* Improved getting deploys and deploy components

* Fixing unit-tests

* Fixing unit-tests

* Code cleanup

* Code cleanup

* Code cleanup

* Updated version

* Updated version

* Removed outdated method

* Updated versions

* Updated versions

* Updated versions

* Updated status

* Corrected pod and job API status types

* Updated version
